Bugzilla bug #17184: PR_Bind should not set the SO_REUSEADDR socket option.  The HAVE_SOCKET_REUSEADDR macro is now obsolete.  Tests that depended on the old PR_Bind behavior needs to call PR_SetSocketOption before PR_Bind. Modified files: _beos.h, _os2.h, _unixos.h, _win16.h, _win95.h, _winnt.h, prsocket.c, ptio.c, accept.c, acceptread.c, sel_spd.c, servr_kk.c, servr_ku.c, servr_uk.c, and servr_uu.c.